--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
 .container {
   width: clamp(50rem, 80%, 150rem);
   margin: 0 auto;
-  /* background-color: #6b5050; */
 }
 .players-info-block {
   display: flex;
@@ -40,9 +39,6 @@ body {
 .player-marker span {
   font-size: 1.2em;
   font-weight: bold;
-}
-.player-name {
-  display: none;
 }
 .player-name-input {
   grid-column: 1 / 3;
@@ -70,7 +66,8 @@ body {
   cursor: pointer;
   background-color: var(--txt-clr);
 }
-#btn-start, #btn-restart {
+#btn-start,
+#btn-restart {
   min-width: 12rem;
   display: block;
   margin: 0 auto;
